<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    android:background="@color/Background_App_todo">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_dialog_add_task"
        android:textColorHint="@color/Text_Title_todo"
        android:textColor="@color/Text_Title_todo"
        android:backgroundTint="@color/Text_Title_todo"/>

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_dialog_category_business"
            android:textColor="@color/todo_business"
            android:textStyle="bold"
            android:textSize="16sp"
            android:buttonTint="@color/todo_business"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_dialog_category_Personal"
            android:textColor="@color/todo_personal"
            android:textStyle="bold"
            android:textSize="16sp"
            android:buttonTint="@color/todo_personal"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_dialog_category_other"
            android:textColor="@color/todo_other"
            android:textStyle="bold"
            android:textSize="16sp"
            android:buttonTint="@color/todo_other"
            android:checked="false"/>
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDialogAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_dialog_btn_CreateTask"
        android:textColor="@color/white"
        android:backgroundTint="@color/Background_button"/>

</LinearLayout>