<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IMCCalculator.IMCAppActivity"
    android:paddingHorizontal="16dp"
    android:paddingTop="32dp"
    android:background="@color/Background_app">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MENU"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvIMCTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/Background_app"/>

    <TextView
        android:id="@+id/tvIMCTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imcAppTitle"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/leftCard"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/leftCard"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/Background_component_selected"
        app:layout_constraintTop_toBottomOf="@+id/tvIMCTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightCard">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_male_white"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAllCaps="true"
                android:layout_marginTop="10dp"
                android:textColor="@color/Title_text"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rightCard"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/Background_component"
        app:layout_constraintTop_toBottomOf="@id/tvIMCTitle"
        app:layout_constraintStart_toEndOf="@id/leftCard"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_female_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/female"
                android:layout_marginTop="10dp"
                android:textColor="@color/Title_text"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/htcv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/Background_component"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/leftCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textAllCaps="true"
                android:textColor="@color/Title_text"/>

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 cm"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"/>
            
            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWeight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/htcv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cvAge"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/Background_component"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weigth"
                android:textColor="@color/Title_text"/>

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubsWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:backgroundTint="@color/purple_500"
                    android:src="@drawable/ic_substract"
                    app:tint="@color/white"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAddWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:backgroundTint="@color/purple_500"
                    android:src="@drawable/ic_add"
                    app:tint="@color/white"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@id/cvAge"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/htcv"
        app:layout_constraintStart_toEndOf="@+id/cvWeight"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/Background_component"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/Title_text"/>

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubsAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/purple_500"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_substract"
                    app:tint="@color/white"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAddAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/purple_500"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_add"
                    app:tint="@color/white"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalulate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/calculate"
        android:backgroundTint="@color/Background_button"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/cvWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="13dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>